--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "5.1.3",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-bootstrap": "^2.2.0",
+    "react-dom": "^17.0.2",
+    "react-uuid": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
